@@ -2,12 +2,13 @@ package io.github.sakurawald.module.initializer.skin.config;
 
 import com.mojang.authlib.properties.Property;
 import io.github.sakurawald.core.auxiliary.LogUtil;
-import io.github.sakurawald.core.config.handler.abst.ConfigHandler;
+import io.github.sakurawald.core.config.handler.abst.BaseConfigurationHandler;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.UUID;
 
@@ -22,10 +23,12 @@ public class SkinIO {
     }
 
     public @Nullable Property loadSkin(UUID uuid) {
-        File file = savePath.resolve(uuid + FILE_EXTENSION).toFile();
+        Path playerData = savePath.resolve(uuid + FILE_EXTENSION);
+        if (Files.notExists(playerData)) return null;
+
         try {
-            String string = org.apache.commons.io.FileUtils.readFileToString(file, StandardCharsets.UTF_8);
-            return ConfigHandler.getGson().fromJson(string, Property.class);
+            String string = Files.readString(playerData);
+            return BaseConfigurationHandler.getGson().fromJson(string, Property.class);
         } catch (IOException e) {
             LogUtil.error("load skin failed: " + e.getMessage());
         }
@@ -34,7 +37,7 @@ public class SkinIO {
 
     public void saveSkin(UUID uuid, Property skin) {
         try {
-            org.apache.commons.io.FileUtils.writeStringToFile(new File(savePath.toFile(), uuid + FILE_EXTENSION), ConfigHandler.getGson().toJson(skin), StandardCharsets.UTF_8);
+            org.apache.commons.io.FileUtils.writeStringToFile(new File(savePath.toFile(), uuid + FILE_EXTENSION), BaseConfigurationHandler.getGson().toJson(skin), StandardCharsets.UTF_8);
         } catch (IOException e) {
             LogUtil.error("save skin failed: " + e.getMessage());
         }
